--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   <header>
-    <a href="./index.html">watchcharm</a>
-    <nav>
+    <div class="container">
+      <a href="./index.html">watchcharm</a>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Catalog</a></li>
+          <li><a href="">Sale</a></li>
+          <li><a href="">Reviews</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </nav>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Catalog</a></li>
-        <li><a href="">Sale</a></li>
-        <li><a href="">Reviews</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="" target="_blank" rel="nooper noreferrer nofollow"><img src="" alt="">F</a></li>
+        <li><a href="" target="_blank" rel="nooper noreferrer nofollow"><img src="" alt="">I</a></li>
+        <li><a href="" target="_blank" rel="nooper noreferrer nofollow"><img src="" alt="">Y</a></li>
       </ul>
-    </nav>
-    <ul>
-      <li><a href="" target="_blank" rel="nooper noreferrer nofollow"><img src="" alt="">F</a></li>
-      <li><a href="" target="_blank" rel="nooper noreferrer nofollow"><img src="" alt="">I</a></li>
-      <li><a href="" target="_blank" rel="nooper noreferrer nofollow"><img src="" alt="">Y</a></li>
-    </ul>
+    </div>
   </header>
   <main>
     <section>
