--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               src="" alt="">Y</a></li>
       </ul>
 
-      <button class="burger-btn" type="button">
+      <button class="burger-btn" type="button" aria-label="open menu">
         <svg class="burger-icon" width="34" height="34">
           <use href="./images/icons.svg#icon-burger"></use>
         </svg>
@@ -69,53 +69,63 @@
         <img class="hero-img" src="./images/main-mob.jpg" alt="close">
       </div>
     </section>
+
     <section class="section">
-      <h2>About Us</h2>
-      <p>Welcome to our premium watch collection, where luxury and style meet functionality and precision. Our selection
-        of
-        timepieces embodies the very best in Swiss craftsmanship and engineering, ensuring that you'll always have a
-        reliable
-        and stylish accessory on your wrist.
-      </p>
-      <p>At our premium watch collection, we believe that a watch is more than just a timekeeping device – it's a
-        statement piece
-        that reflects your personality and style. So why settle for anything less than the best?
-      </p>
-      <a href="">View catalog</a>
-      <img src="./images/about.jpg" alt="Watch">
+      <div class="container">
+        <div class="about-wrapper">
+          <h2 class="about-title">About Us</h2>
+          <p class="about-text">Welcome to our premium watch collection, where luxury and style meet functionality and
+            precision. Our
+            selection
+            of
+            timepieces embodies the very best in Swiss craftsmanship and engineering, ensuring that you'll always have a
+            reliable
+            and stylish accessory on your wrist.
+          </p>
+          <p class="about-text">At our premium watch collection, we believe that a watch is more than just a timekeeping
+            device – it's a
+            statement piece
+            that reflects your personality and style. So why settle for anything less than the best?
+          </p>
+          <a class="about-link" href="">View catalog</a>
+        </div>
+        <div class="about-image-wrapper">
+          <img class="about-image" src="./images/about-mob.jpg" alt="Watch">
+        </div>
+      </div>
     </section>
-    <section>
-      <h2>Catalog</h2>
-      <ul>
-        <li>
-          <img src="./images/catalog1.png" alt="Watch">
-          <h3>Garmin Fenix 7X Pro Sapphire Solar</h3>
-          <p>€500</p>
+    <section class="section">
+      <h2 class="catalog-title">Catalog</h2>
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="./images/catalog1.png" alt="Watch">
+          <h3 class="catalog-item-subtitle">Garmin Fenix 7X Pro Sapphire Solar</h3>
+          <p class="catalog-item-price">€500</p>
         </li>
-        <li>
-          <img src="./images/catalog2.png" alt="Watch">
-          <h3>Garmin Marq Athlete</h3>
-          <p>€450</p>
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="./images/catalog2.png" alt="Watch">
+          <h3 class="catalog-item-subtitle">Garmin Marq Athlete</h3>
+          <p class="catalog-item-price">€450</p>
         </li>
-        <li>
-          <img src="./images/catalog3.png" alt="Watch">
-          <h3>Garmin Descent MK1</h3>
-          <p>€680</p>
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="./images/catalog3.png" alt="Watch">
+          <h3 class="catalog-item-subtitle">Garmin Descent MK1</h3>
+          <p class="catalog-item-price">€680</p>
         </li>
-        <li>
-          <img src="./images/catalog4.png" alt="Watch">
-          <h3>Garmin D2 Delta PX</h3>
-          <p>€380</p>
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="./images/catalog4.png" alt="Watch">
+          <h3 class="catalog-item-subtitle">Garmin D2 Delta PX</h3>
+          <p class="catalog-item-price">€380</p>
         </li>
-        <li>
-          <img src="./images/catalog5.png" alt="Watch">
-          <h3>Garmin Fenix 6 Pro Solar</h3>
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="./images/catalog5.png" alt="Watch">
+          <h3 class="catalog-item-subtitle">Garmin Fenix 6 Pro Solar</h3>
           <p>€400</p>
         </li>
-        <li>
-          <img src="./images/catalog6.png" alt="Watch">
-          <h3>Tube Watch S42 Date Steel With Black Case</h3>
-          <p>€395</p>
+        <li class="catalog-item">
+          <img class="catalog-item-image" src="./images/catalog6.png" alt="Watch">
+          <h3 class="catalog-item-subtitle">Tube Watch S42 Date Steel With Black Case</h3>
+          <p class="catalog-item-price">€395</p>
         </li>
       </ul>
     </section>
