add section catalog mob

--- a/index.html
+++ b/index.html
@@ -94,40 +94,64 @@
         </div>
       </div>
     </section>
+
     <section class="section">
-      <h2 class="catalog-title">Catalog</h2>
-      <ul class="catalog-list">
-        <li class="catalog-item">
-          <img class="catalog-item-image" src="./images/catalog1.png" alt="Watch">
-          <h3 class="catalog-item-subtitle">Garmin Fenix 7X Pro Sapphire Solar</h3>
-          <p class="catalog-item-price">€500</p>
-        </li>
-        <li class="catalog-item">
-          <img class="catalog-item-image" src="./images/catalog2.png" alt="Watch">
-          <h3 class="catalog-item-subtitle">Garmin Marq Athlete</h3>
-          <p class="catalog-item-price">€450</p>
-        </li>
-        <li class="catalog-item">
-          <img class="catalog-item-image" src="./images/catalog3.png" alt="Watch">
-          <h3 class="catalog-item-subtitle">Garmin Descent MK1</h3>
-          <p class="catalog-item-price">€680</p>
-        </li>
-        <li class="catalog-item">
-          <img class="catalog-item-image" src="./images/catalog4.png" alt="Watch">
-          <h3 class="catalog-item-subtitle">Garmin D2 Delta PX</h3>
-          <p class="catalog-item-price">€380</p>
-        </li>
-        <li class="catalog-item">
-          <img class="catalog-item-image" src="./images/catalog5.png" alt="Watch">
-          <h3 class="catalog-item-subtitle">Garmin Fenix 6 Pro Solar</h3>
-          <p>€400</p>
-        </li>
-        <li class="catalog-item">
-          <img class="catalog-item-image" src="./images/catalog6.png" alt="Watch">
-          <h3 class="catalog-item-subtitle">Tube Watch S42 Date Steel With Black Case</h3>
-          <p class="catalog-item-price">€395</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="catalog-title">Catalog</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <div class="catalog-image-wrapper">
+              <img class="catalog-item-image" src="./images/catalog1-mob.png" alt="Watch">
+            </div>
+
+            <h3 class="catalog-item-subtitle">Garmin Fenix 7X Pro Sapphire Solar</h3>
+            <p class="catalog-item-price">€500</p>
+
+          </li>
+
+          <li class="catalog-item">
+            <div class="catalog-image-wrapper">
+              <img class="catalog-item-image" src="./images/catalog2-mob.png" alt="Watch">
+            </div>
+            <h3 class="catalog-item-subtitle">Garmin Marq Athlete</h3>
+            <p class="catalog-item-price">€450</p>
+          </li>
+
+          <li class="catalog-item">
+            <div class="catalog-image-wrapper">
+              <img class="catalog-item-image" src="./images/catalog3-mob.png" alt="Watch">
+            </div>
+            <h3 class="catalog-item-subtitle">Garmin Descent MK1</h3>
+            <p class="catalog-item-price">€680</p>
+          </li>
+
+          <li class="catalog-item">
+            <div class="catalog-image-wrapper">
+              <img class="catalog-item-image" src="./images/catalog4-mob.png" alt="Watch">
+            </div>
+            <h3 class="catalog-item-subtitle">Garmin D2 Delta PX</h3>
+            <p class="catalog-item-price">€380</p>
+          </li>
+
+          <li class="catalog-item show-item">
+            <div class="catalog-image-wrapper">
+              <img class="catalog-item-image" src="./images/catalog5.png" alt="Watch">
+            </div>
+            <h3 class="catalog-item-subtitle">Garmin Fenix 6 Pro Solar</h3>
+            <p>€400</p>
+          </li>
+
+          <li class="catalog-item show-item">
+            <div class="catalog-image-wrapper">
+              <img class="catalog-item-image" src="./images/catalog6.png" alt="Watch">
+            </div>
+            <h3 class="catalog-item-subtitle">Tube Watch S42 Date Steel With Black Case</h3>
+            <p class="catalog-item-price">€395</p>
+          </li>
+
+        </ul>
+        <button class="catalog-btn" type="button">Show more</button>
+      </div>
     </section>
 
     <section>
