add contakts mob

--- a/index.html
+++ b/index.html
@@ -154,48 +154,54 @@
       </div>
     </section>
 
-    <section>
-      <h2>Choose <span>your story</span>,
-        making every moment unique. Time is your style,
-        and we reveal it.</h2>
-      <a href="">Contact Us</a>
+    <section class="section">
+      <div class="container contacts-container">
+        <h2 class="contacts-title">Choose <span class="contakts-title-accent">your story</span>,
+          making every moment unique. Time is your style,
+          and we reveal it.
+        </h2>
+        <a class="contacts-link" href="#">Contact Us</a>
+      </div>
     </section>
 
-    <section>
-      <h2>Sale</h2>
-      <ul>
-        <li>
-          <img src="./images/sale-front.png" alt="Watch">
-        </li>
-        <li>
-          <img src="./images/sale-back.png" alt="Watch">
-        </li>
-        <li>
-          <img src="./images/sale-left.png" alt="Watch">
-        </li>
-        <li>
-          <img src="./images/sale-right.png" alt="Watch">
-        </li>
-      </ul>
-      <img src="./images/sale.png" alt="Watch">
-      <h3>MARQ® Commander (Gen 2) - Carbon Edition</h3>
-      <p>Product tag: 706587</p>
-      <p>€1500</p>
-      <p>€3000</p>
-      <p>The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for adventurers that takes materials and
-        features
-        to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a precise
-        AMOLED
-        touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.
-      </p>
-      <ul>
-        <li>Fused carbon fiber </li>
-        <li>Grade-5 Titanuim</li>
-        <li>Athlete</li>
-        <li>Golfer</li>
-        <li>Commander</li>
-        <li>Adventurer</li>
-      </ul>
+    <section class="section">
+      <div class="container">
+        <h2 class="sale-title">Sale</h2>
+        <ul class="sale-list">
+          <li class="sale-item">
+            <img class="sale-item-image" src="./images/sale-front.png" alt="Watch">
+          </li>
+          <li class="sale-item">
+            <img class="sale-item-image" src="./images/sale-back.png" alt="Watch">
+          </li>
+          <li class="sale-item">
+            <img class="sale-item-image" src="./images/sale-left.png" alt="Watch">
+          </li>
+          <li class="sale-item">
+            <img class="sale-item-image" src="./images/sale-right.png" alt="Watch">
+          </li>
+        </ul>
+        <img class="sale-image" src="./images/sale.png" alt="Watch">
+        <h3 class="sale-subtitle">MARQ® Commander (Gen 2) - Carbon Edition</h3>
+        <p>Product tag: 706587</p>
+        <p>€1500</p>
+        <p>€3000</p>
+        <p>The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for adventurers that takes materials
+          and
+          features
+          to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a precise
+          AMOLED
+          touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.
+        </p>
+        <ul>
+          <li>Fused carbon fiber </li>
+          <li>Grade-5 Titanuim</li>
+          <li>Athlete</li>
+          <li>Golfer</li>
+          <li>Commander</li>
+          <li>Adventurer</li>
+        </ul>
+      </div>
 
     </section>
 
