add sale-list mob

--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
         <h2 class="sale-title">Sale</h2>
         <ul class="sale-list">
           <li class="sale-item">
-            <img class="sale-item-image" src="./images/sale-front.png" alt="Watch">
+            <img class="sale-item-image" src="./images/sale-front-mob.png" alt="Watch">
           </li>
           <li class="sale-item">
-            <img class="sale-item-image" src="./images/sale-back.png" alt="Watch">
+            <img class="sale-item-image" src="./images/sale-back-mob.png" alt="Watch">
           </li>
           <li class="sale-item">
-            <img class="sale-item-image" src="./images/sale-left.png" alt="Watch">
+            <img class="sale-item-image" src="./images/sale-left-mob.png" alt="Watch">
           </li>
           <li class="sale-item">
-            <img class="sale-item-image" src="./images/sale-right.png" alt="Watch">
+            <img class="sale-item-image" src="./images/sale-right-mob.png" alt="Watch">
           </li>
         </ul>
         <img class="sale-image" src="./images/sale.png" alt="Watch">
