--- a/index.html
+++ b/index.html
@@ -181,26 +181,32 @@
             <img class="sale-item-image" src="./images/sale-right-mob.png" alt="Watch">
           </li>
         </ul>
-        <img class="sale-image" src="./images/sale.png" alt="Watch">
-        <h3 class="sale-subtitle">MARQ® Commander (Gen 2) - Carbon Edition</h3>
-        <p>Product tag: 706587</p>
-        <p>€1500</p>
-        <p>€3000</p>
-        <p>The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for adventurers that takes materials
-          and
-          features
-          to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a precise
-          AMOLED
-          touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.
-        </p>
-        <ul>
-          <li>Fused carbon fiber </li>
-          <li>Grade-5 Titanuim</li>
-          <li>Athlete</li>
-          <li>Golfer</li>
-          <li>Commander</li>
-          <li>Adventurer</li>
-        </ul>
+        <div class="sale-image-wrapper">
+          <img class="sale-image" src="./images/sale-mob.png" alt="Watch">
+        </div>
+        <div class="sale-wrapper">
+          <h3 class="sale-subtitle">MARQ&reg; Commander (Gen 2) - Carbon Edition</h3>
+          <p class="sale-text-tag">Product tag: 706587</p>
+          <span class="sale-price">€1500</span>
+          <span class="sale-text-price">€3000</span>
+          <p class="sale-text">The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch for adventurers
+            that takes materials
+            and
+            features
+            to the next level. The body of the watch is made of very durable Fused Carbon Fiber material and has a
+            precise
+            AMOLED
+            touch screen. The sensitive touch screen is complemented by buttons that can be used in any conditions.
+          </p>
+          <ul class="sale-list-watch">
+            <li class="sale-item-watch">Fused carbon fiber </li>
+            <li class="sale-item-watch">Grade-5 Titanuim</li>
+            <li class="sale-item-watch">Athlete</li>
+            <li class="sale-item-watch">Golfer</li>
+            <li class="sale-item-watch">Commander</li>
+            <li class="sale-item-watch">Adventurer</li>
+          </ul>
+        </div>
       </div>
 
     </section>
