add section reviews mob

--- a/index.html
+++ b/index.html
@@ -215,8 +215,12 @@
       <div class="container">
         <h2 class="reviews-title">Reviews</h2>
         <ul class="reviews-list">
-          <li class="reviews-item item-close">
-            <img class="reviews-image" src="./images/1.png" alt="John Wax">
+          <li class="reviews-item">
+            <div class="reviews-image-wrapper">
+
+              <img class="reviews-image" src="./images/2.png" alt="John Wax">
+
+            </div>
             <h3 class="reviews-subtitle">John Wax</h3>
             <p class="reviews-text">Buying a watch from was the best choice for me. The design is perfectly combined
               with high quality
@@ -225,8 +229,12 @@
               fits nicely on the hand, and the mechanism works flawlessly.
             </p>
           </li>
-          <li class="reviews-item">
-            <img class="reviews-image" src="./images/2.png" alt="Victoria Romashenko">
+          <li class="reviews-item  item-close">
+            <div class="reviews-image-wrapper">
+
+              <img class="reviews-image" src="./images/1.png" alt="Victoria Romashenko">
+
+            </div>
             <h3 class="reviews-subtitle">Victoria Romashenko</h3>
             <p class="reviews-text">Can't take my eyes off my watch from. Every time I put it on, it is admired by those
               around me. The build
@@ -235,7 +243,11 @@
             </p>
           </li>
           <li class="reviews-item item-close">
-            <img class="reviews-image" src="./images/3.png" alt="Anastasia Trachuk">
+            <div class="reviews-image-wrapper">
+
+              <img class="reviews-image" src="./images/3.png" alt="Anastasia Trachuk">
+
+            </div>
             <h3 class="reviews-subtitle">Anastasia Trachuk</h3>
             <p class="reviews-text">My watch from is a real masterpiece. Every detail impresses with the high quality of
               execution. Special
