--- a/index.html
+++ b/index.html
@@ -259,10 +259,33 @@
       </div>
     </section>
 
-    <section>
-      <h2>Contact Us</h2>
-      <form action=""></form>
-      <img src="./images/contact-us.jpg" alt="Watch">
+    <section class="section">
+      <div class="container">
+        <h2 class="contact-form-title">Contact Us</h2>
+        <div class="contact-form-wrapper">
+          <p class="contact-form-text">
+            Please use the form below to contact us.
+            Enter your name, email, phone,
+            and message and we'll get back to you shortly.
+          </p>
+          <form action="">
+            <label for="name" class="visually-hidden">Name
+            </label>
+            <input id="name" type="text" name="name" placeholder="Name">
+
+            <label for="email" class="visually-hidden">Email
+            </label>
+            <input id="email" type="email" name="email" placeholder="Email">
+
+            <label for="tel" class="visually-hidden">Name
+            </label>
+            <input id="tel" type="tel" name="tel" placeholder="+380">
+
+            <button type="submit">Send</button>
+          </form>
+        </div>
+        <img class="contact-form-image" src="./images/contact-us.jpg" alt="Watch">
+      </div>
     </section>
 
     <section>
