--- a/index.html
+++ b/index.html
@@ -294,27 +294,29 @@
       </div>
     </section>
 
-    <section>
-      <a href="./index.html">watchcharm</a>
-      <ul>
-        <li>F</li>
-        <li>I</li>
-        <li>Y</li>
-      </ul>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Catalog</a></li>
-        <li><a href="">Sale</a></li>
-        <li><a href="">Reviews</a></li>
-        <li><a href="">Contact Us</a></li>
-      </ul>
-      <p>Have the time of your life with our watches: where high-class craftsmanship meets impeccable design</p>
-      <a href="">+380 (68) 443-94-26</a>
-      <p>©2023 The Watch Spot. All rights reserved.</p>
-      <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
-      <p>Terms of Service</p>
-      <p>Privacy Policy</p>
+    <section class="section">
+      <div class="container footer-container">
+        <a href="./index.html">watchcharm</a>
+        <ul>
+          <li>F</li>
+          <li>I</li>
+          <li>Y</li>
+        </ul>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Catalog</a></li>
+          <li><a href="">Sale</a></li>
+          <li><a href="">Reviews</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+        <p>Have the time of your life with our watches: where high-class craftsmanship meets impeccable design</p>
+        <a href="">+380 (68) 443-94-26</a>
+        <p>©2023 The Watch Spot. All rights reserved.</p>
+        <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
+        <p>Terms of Service</p>
+        <p>Privacy Policy</p>
+      </div>
     </section>
   </main>
   <footer></footer>
