--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <label for="tel" class="visually-hidden">Name
             </label>
             <input class="form-input" id="tel" type="tel" name="tel" placeholder="+380">
-            <label for="comment">Comment
+            <label class="visually-hidden" for="comment">Comment
             </label>
             <textarea class="form-input form-input-comment" id="comment" name="comment">Comment</textarea>
 
@@ -294,32 +294,51 @@
       </div>
     </section>
 
-    <section class="section">
-      <div class="container footer-container">
-        <a href="./index.html">watchcharm</a>
-        <ul>
-          <li>F</li>
-          <li>I</li>
-          <li>Y</li>
-        </ul>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Catalog</a></li>
-          <li><a href="">Sale</a></li>
-          <li><a href="">Reviews</a></li>
-          <li><a href="">Contact Us</a></li>
-        </ul>
-        <p>Have the time of your life with our watches: where high-class craftsmanship meets impeccable design</p>
-        <a href="">+380 (68) 443-94-26</a>
-        <p>©2023 The Watch Spot. All rights reserved.</p>
-        <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
-        <p>Terms of Service</p>
-        <p>Privacy Policy</p>
-      </div>
-    </section>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <div class="container footer-wrapper">
+      <a class="logo footer-logo" href="./index.html">watchcharm</a>
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a class="footer-link" href="#">
+            <svg class="footer-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-Fb"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link" href="#">
+            <svg class="footer-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link" href="#">
+            <svg class="footer-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Catalog</a></li>
+        <li><a href="">Sale</a></li>
+        <li><a href="">Reviews</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+      <p class="footer-subtitle">Have the time of your life with our watches: where high-class craftsmanship meets
+        impeccable design</p>
+      <a href="">+380 (68) 443-94-26</a>
+      <p>©2023 The Watch Spot. All rights reserved.</p>
+      <p>1678 S. Pioneer Road Salt Lake City UT 84104</p>
+      <p>Terms of Service</p>
+      <p>Privacy Policy</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
